[gd_scene load_steps=2 format=2]

[ext_resource path="res://MaterialModePicker.gd" type="Script" id=1]

[node name="MaterialModePicker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="List" type="VBoxContainer" parent="Center"]
margin_left = 435.0
margin_top = 254.0
margin_right = 588.0
margin_bottom = 346.0

[node name="MakeVoxel" type="Button" parent="Center/List"]
margin_right = 153.0
margin_bottom = 20.0
text = "Create Voxel Material"

[node name="MakeDecal" type="Button" parent="Center/List"]
margin_top = 24.0
margin_right = 153.0
margin_bottom = 44.0
text = "Create Decal Material"

[node name="MakeModel" type="Button" parent="Center/List"]
margin_top = 48.0
margin_right = 153.0
margin_bottom = 68.0
text = "Create Model Material"

[node name="Cancel" type="Button" parent="Center/List"]
margin_top = 72.0
margin_right = 153.0
margin_bottom = 92.0
text = "Cancel"
